--- a/content/blog/introducing-vibr.mdx
+++ b/content/blog/introducing-vibr.mdx
@@ -55,7 +55,7 @@ Our platform integrates with the tools you already use, including:
 
 Vibr is currently in private beta, and we're inviting developers to join our early access program. Experience the future of AI chat and help shape the platform as we continue to evolve.
 
-[Sign up for early access →](https://vibr.ai/early-access)
+[Sign up for early access →](https://vibr.fun/early-access)
 
 We can't wait to see what you'll build with Vibr!
 
