--- a/content/legal/terms.mdx
+++ b/content/legal/terms.mdx
@@ -89,5 +89,5 @@ These Terms shall be governed by and construed in accordance with the laws of th
 
 If you have any questions about these Terms, please contact us at:
 
-- Email: legal@vibr.ai
+- Email: legal@vibr.fun
 - Address: 123 AI Street, San Francisco, CA 94105, USA
