--- a/content/legal/privacy.mdx
+++ b/content/legal/privacy.mdx
@@ -113,5 +113,5 @@ We may update our Privacy Policy from time to time. We will notify you of any ch
 
 If you have any questions about this Privacy Policy, please contact us at:
 
-- Email: privacy@vibr.ai
+- Email: privacy@vibr.fun
 - Address: 123 AI Street, San Francisco, CA 94105, USA
